[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "meteopendata2netcdf"
version = "0.1b0"
description = "Download ECMWF IFS open-data forecasts and export them to NetCDF"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Miki", email = "miki4ia@gmail.com" }]
requires-python = ">=3.12"
keywords = ["ecmwf", "ifs", "weather", "forecast", "netcdf", "grib", "meteorology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "ecmwf-opendata>=0.3",
    "cfgrib>=0.9",
    "xarray>=2024.1",
    "netCDF4>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "sphinx-autodoc-typehints>=2",
    "myst-parser>=3",
]

[project.urls]
Homepage       = "https://github.com/your-username/meteopendata2netcdf"
Documentation  = "https://meteopendata2netcdf.readthedocs.io"
Repository     = "https://github.com/your-username/meteopendata2netcdf"
"Bug Tracker"  = "https://github.com/your-username/meteopendata2netcdf/issues"
Changelog      = "https://github.com/your-username/meteopendata2netcdf/blob/main/CHANGELOG.md"

[project.scripts]
meteopendata2netcdf = "meteopendata2netcdf._cli:main"

# ---------------------------------------------------------------------------
# setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meteopendata2netcdf = ["py.typed"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ANN", # flake8-annotations (type hints)
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["meteopendata2netcdf"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version  = "3.12"
strict          = true
warn_return_any = true
show_error_codes = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = [
    "--tb=short",
    "--strict-markers",
    "--cov=meteopendata2netcdf",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
]
markers = [
    "network: tests that require a live ECMWF connection (deselect with -m 'not network')",
    "slow: tests that take more than a few seconds",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["src/meteopendata2netcdf"]
branch   = true
omit     = ["src/meteopendata2netcdf/_cli.py"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
